# online-cinema-api

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  test.db
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1d8f73157455_create_watchlist_table.py  8ebd83aeb576_.py  a677ac28de6e_initial_users_and_tokens_tables.py  b2de68c3b8e5_create_payments_table.py  b2de85baac27_create_reviews_table.py  dad2ed97dc3f_add_categories_movies_and_tags_tables.py
app/: main.py  worker.py
app/auth/: dependencies.py  models.py  router.py  schemas.py  services.py
app/core/: celery_app.py  config.py  database.py  security.py
app/movies/: models.py  router.py  schemas.py  services.py
app/payments/: models.py  router.py  schemas.py  services.py
app/reviews/: models.py  router.py  schemas.py  services.py
app/tasks/: email_tasks.py
app/watchlist/: models.py  router.py  schemas.py  services.py
tests/: conftest.py  test_auth.py  test_movies.py  test_payments.py  test_reviews.py  test_tasks.py  test_watchlist.py
