[project]
name = "online-cinema-api"
version = "0.1.0"
description = ""
authors = [
    {name = "artem",email = "artem90078@gmail.com"}
]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "black (>=26.5.1,<27.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=8.0.0,<9.0.0)",
    "stripe (>=15.2.0,<16.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "celery-types (>=0.26.0,<0.27.0)",
    "fastapi-cache2 (>=0.2.2,<0.3.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "anyio (>=4.13.0,<5.0.0)"
]
[tool.poetry]
packages = [{ include = "app" }]